--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 50px;
     background: rgb(28, 180, 200);
     font-family: 'Courier New', Courier, monospace;
-    font-size: medium;
+    font-size: large;
     color:rgb(255, 215, 0);
 
 }
